# Measuring_Statistical_Heterogeneity

./: pyproject.toml  setup.py
notebooks/: ml.ipynb  statistical_divergence.ipynb
notebooks/final/: partition.ipynb  statistical_appoach.ipynb
notebooks/final/.ipynb_checkpoints/: ml_approach-checkpoint.ipynb
src/ml/: ml_mnist_cifar10.py  tff.py
src/statistical_divergence/: statistical_divergence.py
src/utils/: partitioning.py  utils.py
